complete with some decoration

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                         </div>
                         <div class="bg-yellow-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8">
                             <img src="Images/email.png" alt="">
-                            <p class="text-base font-normal mt-5 text-gray-400">Email : <br>
+                            <p class="text-base font-normal mt-5 text-gray-400 ">Email : <br>
                                 <span class="text-lg text-black font-extrabold ">hockeys@support.com</span>
                             </p>
 
@@ -647,33 +647,33 @@
                             <div>
                                 <h2 class="text-xl font-bold text-black" for="">Your Name</h2>
                                 <input type="text" placeholder="Your Name"
-                                    class="input bg-slate-100  w-full h-16 mt-2 border-none" />
+                                    class="input bg-slate-100  w-full h-16 mt-2 border-none shadow" />
                             </div>
                             <div>
                                 <h2 class="text-xl font-bold text-black" for="">Your Email</h2>
                                 <input type="text" placeholder="Your Name"
-                                    class="input bg-slate-100  w-full h-16 mt-2 border-none" />
+                                    class="input bg-slate-100  w-full h-16 mt-2 border-none shadow" />
                             </div>
                             <div>
                                 <h2 class="text-xl font-bold text-black" for="">Subject</h2>
                                 <input type="text" placeholder="Enter your subject"
-                                    class="input  bg-slate-100  h-16 w-full mt-2 border-none" />
+                                    class="input  bg-slate-100  h-16 w-full mt-2 border-none shadow" />
                             </div>
                             <div>
                                 <h2 class="text-xl font-bold text-black" for="">Phone Number</h2>
                                 <input type="text" placeholder="Enter your phone number"
-                                    class="input bg-slate-100  h-16 w-full mt-2 border-none" />
+                                    class="input bg-slate-100  h-16 w-full mt-2 border-none shadow" />
                             </div>
 
                         </div>
                         <div class="mt-6">
                             <h2 class="text-xl font-bold text-black" for="">Message</h2>
-                            <textarea class="textarea  bg-slate-100 mt-2 w-full h-80 border-none"
+                            <textarea class="textarea  bg-slate-100 mt-2 w-full h-80 border-none shadow"
                                 placeholder="Write your message"></textarea>
 
                         </div>
                         <div>
-                            <button class="btn bg-red-500 text-white text-xl font-bold h-14 w-full mt-6">Send
+                            <button class="btn bg-red-500 text-white text-xl font-bold h-14 w-full mt-6 shadow">Send
                                 Message</button>
                         </div>
 
