--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
                         </div>
                     </div>
                 </div>
-                <div class=" w-auto  bg-black px-6 py-8 rounded-2xl lg:w-1/2 absolute lg:right-5 lg:-translate-y-48">
+                <div class=" w-auto  bg-black px-6 py-8 rounded-2xl lg:w-1/2 absolute lg:right-5 lg:-translate-y-48 lg:shadow">
                     <h2 class="text-lg lg:text-2xl  text-white font-bold">Meet all the heroes from the field</h2>
                     <p class=" text-zinc-200 text-sm mt-4">A dynamic force on the ice, the skilled hockey player
                         maneuvers with precision, scoring goals, and fostering teamwork for thrilling victories.</p>
                 </div>
             </div>
         </section>
-
-        
 
 
         <!-- card section -->
