complete full assignment

--- a/index.html
+++ b/index.html
@@ -613,15 +613,15 @@
 
                 </div>
                 <div class="grid grid-cols-1 lg:grid-cols-3 mt-10 gap-6 ">
-                    <div class="col-span-1 bg-white shadow rounded-2xl w-full p-8 space-y-4">
-                        <div class="bg-lime-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8 ">
+                    <div class="col-span-1 bg-white shadow rounded-2xl w-full p-8 space-y-4 ">
+                        <div class="bg-lime-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8 shadow">
                             <img src="Images/call.png" alt="">
                             <p class="text-base font-normal mt-5 text-gray-400">Phone Number : <br>
                                 <span class="text-lg text-black font-extrabold">(+62) 123-321-543</span>
                             </p>
 
                         </div>
-                        <div class="bg-yellow-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8">
+                        <div class="bg-yellow-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8 shadow">
                             <img src="Images/email.png" alt="">
                             <p class="text-base font-normal mt-5 text-gray-400 ">Email : <br>
                                 <span class="text-lg text-black font-extrabold ">hockeys@support.com</span>
@@ -629,7 +629,7 @@
 
                         </div>
 
-                        <div class="bg-cyan-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8 ">
+                        <div class="bg-cyan-50 rounded-2xl h-48 flex flex-col  justify-center items-start p-8  shadow">
                             <img src="Images/location.png" alt="">
                             <p class="text-base font-normal mt-5 text-gray-400">Location : <br>
                                 <span class="text-lg text-black font-extrabold">152/1 Mohakhali Wireless Gate</span>
