--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -225,7 +225,7 @@
 
             </div>
             <div
-                class="rounded-2xl pt-52 px-10 pb-10 bg-[linear-gradient(45deg,rgba(0,0,0,0.8),rgba(0,0,0,0.4)),url(./Images/professional.png)] bg-center bg-cover mt-6">
+                class="rounded-2xl pt-24 lg:pt-52 px-10 pb-10 bg-[linear-gradient(45deg,rgba(0,0,0,0.8),rgba(0,0,0,0.4)),url(./Images/professional.png)] bg-center bg-cover mt-6">
 
                 <h2 class="text-white text-xl lg:text-3xl font-bold">Professional Program</h2>
                 <p class="text-white text-xs lg:text-base mt-4 mb-6 lg:w-1/2">The professional hockey program stands as the
@@ -520,10 +520,10 @@
             <!-- 2nd part -->
 
             <div class="lg:flex  gap-6 lg:items-center lg:justify-center px-5 py-5  bg-white shadow rounded-2xl">
-                <div>
+                <div class="w-100%">
                     <img src="Images/question.png" alt="">
                 </div>
-                <div class="w-full">
+                <div class="w-100%">
                     <div class="collapse collapse-plus ">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl  font-extrabold">
